--- a/tmux/tmux_arm.conf
+++ b/tmux/tmux_arm.conf
@@ -1,5 +1,8 @@
+## リモートのプレフィックスはZ
+set -g prefix C-z
+
+
 ## ホスト毎にステータスラインの色を変える
 set-option -g status-bg yellow
-
 set-option -g default-terminal "screen-256color"
 
