--- a/tmux/tmux_aws.conf
+++ b/tmux/tmux_aws.conf
@@ -1,3 +1,6 @@
+## リモートのプレフィックスはZ
+set -g prefix C-z
+
 ## コピペの設定。Windowsとコピペを共有
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
