--- a/tmux/tmux_win.conf
+++ b/tmux/tmux_win.conf
@@ -7,3 +7,12 @@ set-option -g status-bg cyan
 
 set-option -g default-terminal "screen-256color"
 
+## アクティブ非アクティブの分かりやすさ
+set -g window-style 'bg=colour234'
+set -g window-active-style 'bg=colour0'
+
+set -g pane-border-bg colour234
+set -g pane-border-fg colour67
+set -g pane-active-border-bg colour250
+set -g pane-active-border-fg colour50
+
