--- a/tmux/tmux_win.conf
+++ b/tmux/tmux_win.conf
@@ -16,3 +16,8 @@ set -g pane-border-fg colour67
 set -g pane-active-border-bg colour250
 set -g pane-active-border-fg colour50
 
+
+## alert関連
+set -g bell-action all
+set -g visual-bell off
+set -g bell-on-alert off
