added beep related things

--- a/tmux/tmux_win.conf
+++ b/tmux/tmux_win.conf
@@ -21,3 +21,12 @@ set -g pane-active-border-fg colour50
 set -g bell-action all
 set -g visual-bell off
 set -g bell-on-alert off
+
+## 新しいpane関連
+
+# 新しいPaneを開く場合
+bind c new-window -c '#{pane_current_path}'
+# 現在のPaneを水平分割してWindowを開く
+bind \ split-window -h -c '#{pane_current_path}'
+# 現在のPaneを垂直分割してWindowを開く
+bind - split-window -v -c '#{pane_current_path}'
