--- a/tmux/tmux_win.conf
+++ b/tmux/tmux_win.conf
@@ -27,6 +27,6 @@ set -g bell-on-alert off
 # 新しいPaneを開く場合
 bind c new-window -c '#{pane_current_path}'
 # 現在のPaneを水平分割してWindowを開く
-bind \ split-window -h -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
 # 現在のPaneを垂直分割してWindowを開く
-bind - split-window -v -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
