--- a/tmux/tmux_win.conf
+++ b/tmux/tmux_win.conf
@@ -17,6 +17,9 @@ set -g pane-active-border-bg colour250
 set -g pane-active-border-fg colour50
 
 
+## status right
+set -g status-right '[%Y-%m-%d]'
+
 ## alert関連
 set -g bell-action all
 set -g visual-bell off
